--- a/debian/install
+++ b/debian/install
@@ -1,8 +1,11 @@
 #kongGUI /opt/kong-gateway
-konga /opt/gluu-gateway
 #kong-openid-rp /opt/gluu-gateway
 #kong-uma-rs /opt/gluu-gateway
 #kongAPIGateway /opt/kong-pluings
 #oxd-kong /opt/kong-gateway
-setup /opt/gluu-gateway
 #doc /usr/share/docs/
+konga /opt/gluu-gateway
+setup/konga /etc/init.d/
+setup /opt/gluu-gateway
+setup/kong /etc/init.d/
+dist /opt/gluu-gateway
