--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gluu-gateway (3.1.3-11~trusty+Ub14.04) unstable; urgency=low
+gluu-gateway %VERSION% unstable; urgency=low
 
   * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
 
