--- a/debian/install
+++ b/debian/install
@@ -4,8 +4,12 @@
 #kongAPIGateway /opt/kong-pluings
 #oxd-kong /opt/kong-gateway
 #doc /usr/share/docs/
-konga /opt/gluu-gateway
-setup/konga /etc/init.d/
-setup /opt/gluu-gateway
-setup/kong /etc/init.d/
-dist /opt/gluu-gateway
+##konga /opt/gluu-gateway
+##setup/konga /etc/init.d/
+##setup /opt/gluu-gateway
+##setup/kong /etc/init.d/
+##dist /opt/gluu-gateway
+konga opt/gluu-gateway
+debian/konga etc/init.d
+setup opt/gluu-gateway
+debian/kong etc/init.d
