--- a/debian/install
+++ b/debian/install
@@ -1,5 +1,8 @@
-konga opt/gluu-gateway
 debian/konga etc/init.d
-setup opt/gluu-gateway
 debian/kong etc/init.d
+konga opt/gluu-gateway
+setup opt/gluu-gateway
 kong opt/gluu-gateway/kong
+gg_bower_components.tar.gz opt/gluu-gateway/dist
+gg_node_modules.tar.gz opt/gluu-gateway/dist
+third-party opt/gluu-gateway
