--- a/debian/install
+++ b/debian/install
@@ -6,3 +6,4 @@ setup opt/gluu-gateway
 gg_bower_components.tar.gz opt/gluu-gateway/dist
 gg_node_modules.tar.gz opt/gluu-gateway/dist
 third-party opt/gluu-gateway
+oxd-server_4.0-62~xenial+Ub16.04_all.deb /tmp/
