--- a/debian/install
+++ b/debian/install
@@ -7,3 +7,4 @@ gg_bower_components.tar.gz opt/gluu-gateway/dist
 gg_node_modules.tar.gz opt/gluu-gateway/dist
 third-party opt/gluu-gateway
 %OXD_SERVER% /tmp/
+%KONG% /tmp/
