--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ gluu-gateway %VERSION% %DIST%; urgency=low
 
   * New Version %VERSION%
 
- -- Adrian Alves <adrian@gluu.org>  Thu, 05 Oct 2017 12:40:08 -0400
+ -- Davit Nikoghosyan <davit@gluu.org>  Wed, 16 Oct 2019 12:40:08 -0400
